Deployment: add https endpoints and routing in traefik
